# libosi

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  COPYRIGHT.md  CPackConfig.txt  LICENSE.md  README.md  triggers
.github/workflows/: publish_deb.yml
include/iohal/memory/: common.h  physical_memory.h  virtual_memory.h  virtual_memory_translator.h
include/lintrospection/: lintrospection.h
include/offset/: array_t.h  i_t.h  offset.h  windows_common.h
include/osi/linux/: iterator.h  lintrospection.h
include/osi/windows/: iterator.h  manager.h  pe.h  wintrospection.h
include/wintrospection/: i_t.h  iterator.h  pe.h  ustring.h  utils.h  wintrospection.h
src/iohal/memory/: pmem_snapshot.cc  virtual_memory.cc
src/iohal/translators/: virtual_memory_translators.cc  vm_amd64.cc  vm_amd64.h  vm_i386.cc  vm_i386.h  vm_i386_pae.cc  vm_i386_pae.h  windows_amd64.cc  windows_amd64.h  windows_i386.cc  windows_i386.h  windows_i386_pae.cc  windows_i386_pae.h
src/lintrospection/: api.cc  kernel_osi.cc  kernel_osi.h
src/offset/: core.cc
src/offset/profiles/: debian8_11_x64.cpp  debian8_11_x64.h  debian8_11_x86.cpp  debian8_11_x86.h  linux3_16_x64.cpp  linux3_16_x64.h  linux3_16_x86.cpp  linux3_16_x86.h  win10_1809_x64.cpp  win10_1809_x64.h  win10_1809_x86.cpp  win10_1809_x86.h  win7_sp0_x64.cpp  win7_sp0_x64.h  win7_sp0_x86.cpp  win7_sp0_x86.h  win7_sp1_x64.cpp  win7_sp1_x64.h  win7_sp1_x86.cpp  win7_sp1_x86.h  win_2000_x86.cpp  win_2000_x86.h  win_xpsp2_x86.cpp  win_xpsp2_x86.h  win_xpsp3_x86.cpp  win_xpsp3_x86.h
src/osi/linux/: api.cc  kernel_osi.cc
src/osi/windows/: api.cc  kernel_osi.cc  kernel_osi.h  manager.cc  windows_handles.cc  windows_handles.h  windows_static_offsets.h
src/osi/windows/mem_pe/: mem_pe.cc
src/wintrospection/: api.cc  kernel_osi.cc  kernel_osi.h  windows_handles.cc  windows_handles.h  windows_introspection.cc  windows_introspection.h  windows_static_offsets.h
src/wintrospection/mem_pe/: mem_pe.cc
tests/: CMakeLists.txt  vtop.cc
tests/iohal/: CMakeLists.txt  sparse_pmem.cc  sparse_pmem.h  test_sparse_pmem.cc  test_vmtrans_amd64.cc  test_vmtrans_ia32.cc
tests/offset/: CMakeLists.txt  test_basic.cc
tests/wintrospection/: CMakeLists.txt  amd64.raw.md5  aprog-x64.raw.md5  i386.raw.md5  test_amd64_call_tracer.cc  test_basic.cc  test_i_t.cc  test_kernbase_amd64.cc  test_kernbase_general.cc  test_kernbase_i386.cc  test_mem_pe_amd64.cc  test_mem_pe_general.cc  test_modlist_amd64.cc  test_modlist_general.cc  test_modlist_i386.cc  test_modlist_wow64_notepad_win7sp0.cc  test_modlist_wow64_notepad_win7sp1.cc  test_modlist_wow64_precalc_win7sp0.cc  test_modlist_wow64_precalc_win7sp1.cc  test_modlist_wow64_windbg_win7sp0.cc  test_modlist_wow64_windbg_win7sp1.cc  test_plist_amd64.cc  test_plist_general.cc  test_plist_i386.cc
tests/wintrospection/dlllists/: wow64_notepadwin7sp0_dlllist.json.md5  wow64_notepadwin7sp1_dlllist.json.md5  wow64_precalcwin7sp0_dlllist.json.md5  wow64_precalcwin7sp1_dlllist.json.md5  wow64_windbgwin7sp0_dlllist.json.md5  wow64_windbgwin7sp1_dlllist.json.md5
tests/wintrospection/snapshots/: wow64_notepadwin7sp0.raw.md5  wow64_notepadwin7sp1.raw.md5  wow64_precalcwin7sp0.raw.md5  wow64_precalcwin7sp1.raw.md5  wow64_windbgwin7sp0.raw.md5  wow64_windbgwin7sp1.raw.md5
